--- a/index.html
+++ b/index.html
@@ -989,45 +989,27 @@
         <ul class="social-list">
 
           <li>
-            <a href="#" class="social-link">
+            <a href="https://www.facebook.com/suprabhat.paul.77" class="social-link">
               <ion-icon name="logo-facebook"></ion-icon>
             </a>
           </li>
-
+          
           <li>
-            <a href="#" class="social-link">
+            <a href="https://www.instagram.com/supp.ex/" class="social-link">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
           </li>
 
           <li>
-            <a href="#" class="social-link">
-              <ion-icon name="logo-twitter"></ion-icon>
-            </a>
-          </li>
-
-          <li>
-            <a href="#" class="social-link">
+            <a href="https://www.linkedin.com/in/zeet-paul-6012aa320/" class="social-link">
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
-
-          <li>
-            <a href="#" class="social-link">
-              <ion-icon name="logo-skype"></ion-icon>
-            </a>
-          </li>
-
-          <li>
-            <a href="#" class="social-link">
-              <ion-icon name="mail-outline"></ion-icon>
-            </a>
-          </li>
-
+          
         </ul>
 
         <p class="copyright">
-          &copy; 2022 <a href="#">codewithsadee</a>. All Rights Reserved
+          &copy; 2024 <a href="#">supp.ex</a>. All Rights Reserved
         </p>
 
       </div>
